@@ -98,48 +98,40 @@ rule fost-py-install ( pyd : location ) {
 }
 
 rule fost-smoke-test ( name : libs * : files * ) {
-    #lib $(name)
-    #    :
-    #        $(TOP)/../Boost//boost-date_time-dll
-    #        $(TOP)/../Boost//boost-filesystem-dll
-    #        $(TOP)/../Boost//boost-regex-dll
-    #        $(TOP)/../Boost//boost-system-dll
-    #        $(TOP)/../Boost//boost-thread-dll
-    #        $(TOP)/../fost-base/Cpp/fost-core//fost-core
-    #        $(TOP)/../fost-base/Cpp/fost-test/
-    #        $(libs)
-    #        $(files)
-    #    :
-    #        <target-os>windows:<source>$(TOP)/../OpenSSL//libeay32-dll
-    #        <target-os>windows:<source>$(TOP)/../OpenSSL//ssleay32-dll
-    #        <target-os>linux:<source>$(TOP)/../fost-base/External//openssl
-    #        <target-os>darwin:<source>$(TOP)/../fost-base/External//openssl
-    #    ;
-    #fost-install $(name) ;
+    if ( $(files) ) {
+        local lib-name = $(name) "-lib" ;
+        fost-lib $(lib-name:J)
+            :
+                $(TOP)/../fost-base/Cpp/fost-cli//fost-cli
+                $(TOP)/../fost-base/Cpp/fost-test//fost-test
+                $(libs)
+                $(files)
+            ;
 
-    unit-test $(name)
-        :
-            $(TOP)/../Boost//boost-date_time-dll
-            $(TOP)/../Boost//boost-filesystem-dll
-            $(TOP)/../Boost//boost-regex-dll
-            $(TOP)/../Boost//boost-system-dll
-            $(TOP)/../Boost//boost-thread-dll
-            $(TOP)/../fost-base/Cpp/fost-cli//fost-cli
-            $(TOP)/../fost-base/Cpp/fost-core//fost-core
-            $(TOP)/../fost-base/Cpp/fost-test//fost-test
-            $(libs)
-            $(files)
-            #$(name)
-            $(TOP)/../fost-base/Cpp/fost-test/boost-build-unit-test.cpp
-        :
-            <target-os>darwin:<source>$(TOP)/../fost-base/External//openssl
-            <target-os>linux:<source>$(TOP)/../fost-base/External//openssl
-            <target-os>windows:<source>$(TOP)/../fost-base/External//ole
-            <target-os>windows:<source>$(TOP)/../OpenSSL//libeay32-dll
-            <target-os>windows:<source>$(TOP)/../OpenSSL//ssleay32-dll
-            <toolset>gcc:<cxxflags>-fdiagnostics-show-option
-            <toolset>gcc:<cxxflags>-fno-strict-aliasing
-        ;
+        local unit-test-name = $(name) "-unit-test" ;
+        unit-test $(unit-test-name:J)
+            :
+                $(TOP)/../Boost//boost-date_time-dll
+                $(TOP)/../Boost//boost-filesystem-dll
+                $(TOP)/../Boost//boost-regex-dll
+                $(TOP)/../Boost//boost-system-dll
+                $(TOP)/../Boost//boost-thread-dll
+                $(TOP)/../fost-base/Cpp/fost-cli//fost-cli
+                $(TOP)/../fost-base/Cpp/fost-core//fost-core
+                $(TOP)/../fost-base/Cpp/fost-test//fost-test
+                $(TOP)/../fost-base/Cpp/fost-test/boost-build-unit-test.cpp
+                $(libs)
+                $(lib-name:J)
+            :
+                <target-os>darwin:<source>$(TOP)/../fost-base/External//openssl
+                <target-os>linux:<source>$(TOP)/../fost-base/External//openssl
+                <target-os>windows:<source>$(TOP)/../fost-base/External//ole
+                <target-os>windows:<source>$(TOP)/../OpenSSL//libeay32-dll
+                <target-os>windows:<source>$(TOP)/../OpenSSL//ssleay32-dll
+                <toolset>gcc:<cxxflags>-fdiagnostics-show-option
+                <toolset>gcc:<cxxflags>-fno-strict-aliasing
+            ;
+    }
 }
 rule run-py-test ( test-name : sources + ) {
     import testing ;
@@ -221,8 +213,8 @@ rule fost-exe ( name : sources + : requirements * ) {
             $(TOP)/../Boost//boost-regex-dll
             $(TOP)/../Boost//boost-system-dll
             $(TOP)/../Boost//boost-thread-dll
-            $(TOP)/../fost-base/Cpp/fost-core/
-            $(TOP)/../fost-base/Cpp/fost-cli/
+            $(TOP)/../fost-base/Cpp/fost-core//fost-core
+            $(TOP)/../fost-base/Cpp/fost-cli//fost-cli
             $(sources)
         :
             $(requirements)
@@ -246,10 +238,25 @@ rule fost-lib-autotest ( name : location : libs * : requirements * : install-loc
         : $(requirements)
         : $(install-loc)
         ;
-    local smoke-test-name = $(name) "-smoke-test" ;
+    local smoke-test-name = $(name) "-unit-tests" ;
     fost-smoke-test $(smoke-test-name:J)
         : $(libs) $(name)
         : [ path.glob $(TOP)/$(location) : *-tests.cpp ]
+        ;
+}
+rule fost-integration-test ( name : location : libs * : requirements * : install-loc ? ) {
+    fost-smoke-test $(name)
+        : $(libs)
+        : [ path.glob $(TOP)/$(location) : *.cpp ]
+        ;
+
+    local exe-name = "run-" $(name) ;
+    fost-exe $(exe-name:J)
+        :
+            $(TOP)/../fost-base/Cpp/fost-test//fost-test
+            $(TOP)/../fost-base/Cpp/fost-test/test-main.cpp
+            $(libs)
+            $(lib-name:J)
         ;
 }
 
